# deriving-aeson

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deriving-aeson.cabal
.github/workflows/: haskell.yml
logo/: logo.ai
src/Deriving/: Aeson.hs
src/Deriving/Aeson/: Stock.hs
tests/: test.hs
